--- a/server_orders.html
+++ b/server_orders.html
@@ -19,6 +19,13 @@
     <h2>Your Orders</h2>
     <div class="small" id="serverInfo"></div>
   </div>
+  <div>
+  <button onclick="location='server.html'">Back to Server App</button>
+  <button onclick="location='server_order_detail.html'">Order Details</button>
+  <button onclick="location='kitchen_ticket_detail.html'">Kitchen Tickets</button>
+  <button onclick="location='kitchen.html'">Kitchen App</button>
+  <button onclick="location='index.html'">Home</button>
+  </div>
 
   <div>
     <a class="button" href="server.html">Order Entry</a>
