--- a/server.html
+++ b/server.html
@@ -38,6 +38,10 @@
       <h3>Menu</h3>
       <div id="menuList"></div>
     </div>
+  <div class="nav">
+  <button onclick="location='server_orders.html'">View Server Orders</button>
+  <button onclick="location='kitchen_ticket_detail.html'">View Kitchen Tickets</button>
+  </div>
 
     <div class="panel right">
       <h3>Create Order</h3>
