--- a/server.html
+++ b/server.html
@@ -44,7 +44,11 @@
 
 
   </div>
-
+      <button id="goOrders">View Orders</button>
+      <button id="goOrderDetail">Order Detail</button>
+      <button id="goKitchenTickets">Kitchen Tickets</button>
+      <button onclick="location='server_orders.html'">View Server Orders</button>
+      <button onclick="location='kitchen_ticket_detail.html'">View Kitchen Tickets</button>
     <div class="panel right">
       <h3>Create Order</h3>
       <label>Table Number: <input id="tableNumber" type="number" min="1" /></label>
