--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div style="margin-top:12px">
       <button id="serverBtn">Sign in as Server</button>
       <button id="kitchenBtn">Sign in as Kitchen</button>
-      <button id="goMenu">Menu Viewer</button>
+      <button id="managerBtn">Manager Login</button>
+
     </div>
     <p style="font-size:0.85em;color:#666;margin-top:12px;">This demo saves tickets locally in your browser.</p>
   </div>
@@ -38,9 +39,12 @@
       localStorage.setItem('currentUser', JSON.stringify({ role:'kitchen', name: n }));
       window.location = 'kitchen.html';
     });
-    document.getElementById("goMenu").addEventListener("click", () => {
-      window.location = "menu.html";
-    });
+    document.getElementById("managerBtn").addEventListener("click", () => {
+  const n = nameInput.value.trim() || "Manager";
+  localStorage.setItem("currentUser", JSON.stringify({ role: "manager", name: n }));
+  window.location = "menu.html";
+});
+
   </script>
 </body>
 </html>
