--- a/menu.html
+++ b/menu.html
@@ -2,74 +2,52 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Admin — Menu Editor</title>
+<title>Manager — Menu Viewer</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <style>
-body { font-family: Arial, padding:14px; background:#fff; }
+body { font-family: Arial, sans-serif; padding:14px; background:#fff; }
 header { display:flex; justify-content:space-between; align-items:center; margin-bottom:12px; }
-.card { background:#fafafa; border-radius:8px; padding:12px; box-shadow:0 1px 6px rgba(0,0,0,0.06); margin-bottom:12px; }
-.small { font-size:0.9em; color:#666; }
+.card { background:#fafafa; border-radius:8px; padding:12px; margin-bottom:10px; box-shadow:0 1px 6px rgba(0,0,0,0.06); }
 button { padding:8px 10px; border-radius:6px; cursor:pointer; margin-right:8px; }
-input[type="text"], input[type="number"]{ padding:6px; width:100%; margin-top:4px; box-sizing:border-box; }
+.small { font-size:0.9em; color:#666; }
 </style>
 </head>
 <body>
 <header>
   <div>
-    <h2>Menu Editor</h2>
-    <div class="small" id="adminInfo"></div>
+    <h2>Menu Viewer</h2>
+    <div class="small" id="managerInfo"></div>
   </div>
   <div>
-    <button id="back">Back</button>
-    
+    <button id="editMenu">Edit Menu</button>
+    <button id="logout">Logout</button>
   </div>
 </header>
-
 <div id="menuArea"></div>
 
 <script>
-function $(id){ return document.getElementById(id); }
+function $(id){return document.getElementById(id);}
+const user = JSON.parse(localStorage.getItem("currentUser")||"null");
+if(!user || user.role!=="manager"){ alert("Please sign in as Manager"); window.location="index.html"; }
+$("managerInfo").innerText = `Logged in as: ${user.name} (Role: ${user.role})`;
 
-const user = JSON.parse(localStorage.getItem('currentUser')||'null');
-if(!user){ alert('Please login'); window.location='index.html'; }
-$('adminInfo').innerText = `Logged in as: ${user.name} (Role: ${user.role})`;
-
-function getMenu(){ return JSON.parse(localStorage.getItem('MENU')||'[]'); }
-function saveMenu(menu){ localStorage.setItem('MENU', JSON.stringify(menu)); }
-
+function getMenu(){ return JSON.parse(localStorage.getItem("menu")||'[]'); }
 function renderMenu(){
-  const menu = getMenu(); // <-- read once
-  const area = $('menuArea');
-  area.innerHTML='';
-  menu.forEach((it, idx)=>{
-    const div = document.createElement('div'); div.className='card';
-    div.innerHTML = `
-      <label>Name: <input type="text" value="${it.name}" id="name${idx}"></label>
-      <label>Price: <input type="number" step="0.01" value="${it.price}" id="price${idx}"></label>
-      <label>Modifiers (comma separated): <input type="text" value="${it.modifiers.join(', ')}" id="mods${idx}"></label>
-      <button id="save${idx}">Save</button>
-    `;
+  const menu = getMenu();
+  const area = $("menuArea");
+  area.innerHTML = "";
+  if(menu.length===0) area.innerHTML="<div class='small'>No menu items available.</div>";
+  menu.forEach(it=>{
+    const div = document.createElement("div"); div.className="card";
+    div.innerHTML = `<strong>${it.name}</strong> - $${it.price.toFixed(2)}
+                     <div class="small">Modifiers: ${it.modifiers.join(", ") || "-"}</div>`;
     area.appendChild(div);
-
-    document.getElementById(`save${idx}`).addEventListener('click', ()=>{
-      // Update the array
-      menu[idx].name = document.getElementById(`name${idx}`).value;
-      menu[idx].price = parseFloat(document.getElementById(`price${idx}`).value) || 0;
-      menu[idx].modifiers = document.getElementById(`mods${idx}`).value.split(',').map(s=>s.trim()).filter(Boolean);
-      // Save back the updated array
-      saveMenu(menu);
-      alert('Menu updated!');
-    });
   });
 }
 
-}
+$("editMenu").addEventListener("click", ()=> window.location="menu_edit.html");
+$("logout").addEventListener("click", ()=> { localStorage.removeItem("currentUser"); window.location="index.html"; });
 
-// navigation
-$('back').addEventListener('click',()=>window.location='server.html');
-$('logout').addEventListener('click',()=>{ localStorage.removeItem('currentUser'); window.location='index.html'; });
-
-// init
 renderMenu();
 </script>
 </body>
