--- a/menu.html
+++ b/menu.html
@@ -7,8 +7,8 @@
 <style>
 body { font-family: Arial, sans-serif; padding:14px; background:#fff; }
 header { display:flex; justify-content:space-between; align-items:center; margin-bottom:12px; }
-.panel { border-radius:8px; padding:12px; box-shadow:0 1px 6px rgba(0,0,0,0.06); background:#fafafa; }
-button { padding:8px 10px; border-radius:6px; cursor:pointer; margin-left:6px; }
+.panel { border-radius:8px; padding:12px; box-shadow:0 1px 6px rgba(0,0,0,0.06); background:#fafafa; margin-bottom:12px; }
+button { padding:6px 10px; border-radius:6px; cursor:pointer; margin-left:6px; }
 .small { font-size:0.9em; color:#666; }
 </style>
 </head>
@@ -20,45 +20,40 @@ button { padding:8px 10px; border-radius:6px; cursor:pointer; margin-left:6px; }
   </div>
   <div>
     <button id="editMenu">Edit Menu</button>
+    <button id="viewLog">View Orders Log</button>
     <button id="back">Back</button>
     <button id="logout">Logout</button>
   </div>
 </header>
 
-<div class="panel" id="menuList">Loading menu...</div>
+<div id="menuContainer">Loading menu...</div>
 
 <script>
 function $(id){ return document.getElementById(id); }
 const user = JSON.parse(localStorage.getItem('currentUser') || 'null');
-if(!user || user.role !== 'manager'){ alert('Please sign in as Manager'); window.location='index.html'; }
+if(!user){ alert('Please log in'); window.location='index.html'; }
 $('userInfo').innerText = `Logged in as: ${user.name} (Role: ${user.role})`;
 
-if(!localStorage.getItem('MENU')){
-  const defaultMenu = [
-    { id:'m1', name:'Caesar Salad', price:8.50, modifiers:['No Dressing','Extra Dressing'] },
-    { id:'m2', name:'Cheeseburger', price:11.00, modifiers:['Well-Done','No Onions','Add Bacon'] },
-    { id:'m3', name:'Margherita Pizza', price:12.50, modifiers:['Extra Cheese','No Basil','Gluten-Free'] },
-    { id:'m4', name:'Fries', price:4.0, modifiers:['No Salt','Extra Crispy'] }
-  ];
-  localStorage.setItem('MENU', JSON.stringify(defaultMenu));
-}
-
+// load menu from localStorage
 function renderMenu(){
-  const menu = JSON.parse(localStorage.getItem('MENU'));
-  const container = $('menuList');
+  const container = $('menuContainer');
+  const menu = JSON.parse(localStorage.getItem('MENU') || '[]');
   container.innerHTML = '';
+  if(menu.length===0){ container.innerHTML='<p>No menu items found.</p>'; return; }
   menu.forEach(it=>{
-    const div = document.createElement('div');
-    div.style.marginBottom = '8px';
-    div.innerHTML = `<strong>${it.name}</strong> — $${it.price.toFixed(2)}<div class="small">Modifiers: ${it.modifiers.join(', ')}</div>`;
+    const div = document.createElement('div'); div.className='panel';
+    div.innerHTML = `<strong>${it.name}</strong> — $${it.price.toFixed(2)}<br><small>Modifiers: ${it.modifiers.join(', ')}</small>`;
     container.appendChild(div);
   });
 }
 
-$('editMenu').addEventListener('click', ()=> window.location='menu_admin.html');
-$('back').addEventListener('click', ()=> window.location='index.html');
+// navigation buttons
+$('editMenu').addEventListener('click', ()=> window.location='menu_admin.html'); // fixed
+$('viewLog').addEventListener('click', ()=> window.location='orders_log.html');    // new
+$('back').addEventListener('click', ()=> window.history.back());
 $('logout').addEventListener('click', ()=> { localStorage.removeItem('currentUser'); window.location='index.html'; });
 
+// initial render
 renderMenu();
 </script>
 </body>
